@@ -50,7 +50,7 @@ else (WIN32 OR APPLE)
     option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" ON)
 endif (WIN32 OR APPLE)
 option(ENABLE_KDE "Enable KDE libraries" OFF)
-option(ENABLE_QT5 "Build against Qt5" OFF)
+option(ENABLE_QT5 "Build against Qt5" ON)
 option(ENABLE_UBUNTU "Build for the Ubuntu SDK" OFF)
 option(ENABLE_UBUNTU_COMMAND_LINE "Build for the Ubuntu SDK from the command line" OFF)
 option(ENABLE_FFMPEG "Enable ffmpeg/libav libraries (required for replaygain calculation)" ON)
@@ -132,9 +132,9 @@ if (ENABLE_UBUNTU)
     set(USE_SYSTEM_MENU_ICON OFF)
 endif (ENABLE_UBUNTU)
 
-if (ENABLE_QT5)
-    set(ENABLE_KDE OFF)
-endif (ENABLE_QT5)
+if (ENABLE_KDE)
+    set(ENABLE_QT5 OFF)
+endif (ENABLE_KDE)
 
 if (NOT WIN32 AND NOT APPLE AND ENABLE_DEVICES_SUPPORT AND ENABLE_UDISKS2)
     set(WITH_SOLID_UDISKS2 ON)
